src/main/default/objects/ChatUser__c/ChatUser__c.object-meta.xml
<CustomObject>
    <description>A user participating in the chat where a bot is involved</description>
    <label>Chat User</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chat Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>