src/main/default/objects/ChatUser__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>User id that is shared by a messenger</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>