src/main/default/objects/ChatUser__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>User&apos;s first name</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>