src/main/default/objects/ChatUser__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExternalId__c</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Username__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>